fixed alignment of nav links

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-end;
   background-color: blue;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -15,10 +15,14 @@ body {
   height: 5vh;
 }
 
-.nav li:hover {
-  background-color: darkblue;
+.nav li {
+  display: flex;
   height: 100%;
   align-items: center;
+}
+
+.nav li:hover {
+  background-color: darkblue;
 }
 
 .nav li a {
